[tool.poetry]
name = "attack-range"
version = "3.1.0"
description = ""
authors = ["P4T12ICK <pbareiss@splunk.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^10.3.0"
pywinrm = "^0.4.2"
PyYAML = "^6.0.2"
colorama = "^0.4.4"
python-terraform = "^0.10.1"
tabulate = "^0.8.9"
boto3 = "^1.35.10"
atomic-operator = "^0.9.0"
ansible-runner = "^2.4.0"
azure-mgmt-resource = "^23.1.1"
azure-mgmt-network = "^26.0.0"
azure-mgmt-compute = "^33.0.0"
azure-identity = "^1.17.1"
splunk-sdk = "^2.0.2"
urllib3 = "^2.2.2"
pycryptodome = "^3.20.0"
questionary = "^2.0.1"
Jinja2 = "^3.1.4"
python-vagrant = "^1.0.0"

# Fix issue with docutils ".post1" release
# https://github.com/python-poetry/poetry/issues/9293#issuecomment-2048205226
gitpython = "^3.1.43"
[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
